Fix #189: Fix legend spacing and font size

--- a/src/components/views/css/MetricOverview.css
+++ b/src/components/views/css/MetricOverview.css
@@ -43,28 +43,16 @@
 }
 
 .metric-overview .legend {
-    font-size: .9em;
     max-width: 1100px;
-    font-weight: 400;
-}
-
-.metric-overview .striped {
-    width: 100%;
 }
 
 .metric-overview .legend span {
     display: block;
+    font-size: .9rem;
+    font-weight: 400;
     margin: 5px;
 }
 
-@media all and (min-width: 550px) {
-    .metric-overview .legend span {
-        margin: 5px;
-    }
-}
-
-@media all and (min-width: 1200px) {
-    .metric-overview .legend span {
-        margin: 5px 0;
-    }
+.metric-overview .striped {
+    width: 100%;
 }
